[metadata]
name = luz
version = 0.0.1
url = https://github.com/kijanac/luz
author = Ki-Jana Carter
author_email = kijana@mit.edu
description = Framework for rapid research and development of machine learning projects using PyTorch.
long_description = file: README.rst
license = MIT

[options]
python_requires = >=3.7
package_dir = 
	= src
packages = find:
install_requires = 
	dgl
	matplotlib
	networkx
	pytorch
	rdkit
	torch-cluster
	torch-geometric
	torch-scatter
	torch-sparse
	torch-spline-conv
tests_require = 
	pytest
	pytest-cov

[options.packages.find]
where = src
exclude = 
	.git
	conda
	docs
	sphinx
	tests

[options.extras_require]
dev = 
	anaconda-client
	black
	codecov
	conda-build
	conda-verify
	latexmk
	make
	sphinx
	sphinx-autodoc-typehints
	tectonic
	twine

[tool:pytest]
addopts = -x -v --cov --cov-report=xml
testpaths = tests

[docs]
builder = html latexpdf
extensions = 
	sphinx.ext.napoleon
	sphinx.ext.autodoc
	sphinx_autodoc_typehints
params = 
	add_module_names = False
	html_theme = nature
	use_napoleon_params = True

[env]
channels = 
	conda-forge
	dglteam
	ostrokach-forge
	pytorch

[conda_build]
channels = 
	conda-forge
	dglteam
	ostrokach-forge
	pytorch

[install_local]
channels = 
	conda-forge
	dglteam
	ostrokach-forge
	pytorch

